# peped-BE

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  TESTING_CASE_STUDY_REPORT.md  TESTING_REPORT.md  count_askfer_tokens.py  dbg.py  docker-compose.yml  enqueue_test.py  fetch_moodle.py  make_zip.py  moodle_dashboard.html  pyproject.toml  requirements.txt  scratch_refactor.py  test_15_queries.py  test_jwt.py  test_llm_direct.py  test_login.py  test_ngrok.py  test_ngrok_api.py  test_numeric_resolution.py  test_pipeline.py  test_ponytail.py  test_rate_limit.py  trigger_ingest.py  verify_auth.py  verify_batch_logging.py
.agent/skills/moodle-api-user/: SKILL.md
.streamlit/: config.toml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
app/: main.py  observability.py  worker.py
app/agents/: conversation_state.py  long_term_memory.py  long_term_memory_qdrant.py  memory.py
app/api/: askfer_deps.py  auth.py  concurrency.py  schemas.py  user_utils.py
app/api/routes/: admin.py  askfer.py  chat.py  ingest.py
app/config/: embedding_config.py  logging.py  settings.py
app/database/: models.py  postgres.py  qdrant_client.py  redis_client.py
app/eval/: __init__.py  auto_calibrate_intent_gate.py  calibrate_dense_floor.py  calibrate_intent_gate.py  calibrate_judge.py  debug_lc.py  disambig_live_probe.py  disambig_probe.py  hallucination_probe.py  intent_gate_quality_70.py  judge.py  run_dataset.py  run_mentor_eval.py  run_retrieval_eval.py  runner.py  socratic_smoke.py  tasks.py
app/graph/: askfer_pipeline.py  intent_classifier.py  intent_patterns.yaml  intent_rules.py  intent_seed.yaml  pipeline.py  state.py  tools.py
app/ingestion/: chunker.py  embedder.py  moodle_sync.py  pipeline.py  portfolio_sync.py
app/llm/: askfer_prompts.py  client.py  prompts.py
app/retrieval/: followup_validator.py  hybrid_retriever.py  reranker.py  schemas.py  vector_retriever.py
app/static/: askfer-chips.json  askfer.html  index-backup.html  index.html  moodle_ingest.html  script.js  style.css
app/tests/: test_topic_streak.py
app/utils/: cache.py  lang.py  logger_batch.py  pii.py  retry.py  token_counter.py
dashboard/: app.py  requirements.txt
data/eval/: baseline.json  build_balanced_calibration.py  golden_set.jsonl  judge_calibration_balanced.json  judge_calibration_seed.json  last_run.json  last_run_rerank_off.json  last_run_rerank_on.json
data/personal/: cv.md  homepage.md  profile.md
data/personal/knowledge/: addie.md  adult-learning-andragogy.md  blooms-taxonomy.md  cognitive-load-multimedia.md  design-philosophy-process.md  elearning-impact-measurement.md  engagement-and-completion.md  failure-and-lessons-learned.md  kirkpatrick-evaluation.md  other-id-frameworks.md  portfolio-metrics.md  project-impact-comparison.md  sam-vs-addie.md  tools.md
data/personal/projects/: agent-network.md  amartha-lms-chatbot.md  amarthafin-mockup.md  anti-harassment.md  asa.md  botani-quest.md  bts.md  dunia-geometri.md  modal.md  training-client-protection.md
data/test-questions/: 40-studicase-questions.md  TEST_REPORT.md  run_test.sh  test_results.jsonl
docs/superpowers/plans/: 2026-03-29-scalability-production-readiness.md
docs/superpowers/specs/: 2026-03-11-moodle-integration-design.md  2026-03-29-scalability-production-readiness-design.md  2026-05-23-askfer-portfolio-chat-design.md  Unified-Moodle-RAG-Architecture.md  brainstorming_moodle_ingestion.md
eval/results/: extended_60_20260617_024753.json  http_chat_quality_30_1781656013.json  http_chat_quality_30_1781658133.json  intent_gate_quality_70_1781655694.json  intent_gate_quality_70_1781658059.json  run_extended_60.py
logs/: app.json
mockup/: fab-popup.html  kebab-discoverability.html  onboarding-tutorial.html
plugin_moodle/chatbot/: block_chatbot.php  settings.php  version.php
plugin_moodle/chatbot/db/: access.php  install.php
plugin_moodle/chatbot/lang/en/: block_chatbot.php
plugin_moodle/chatbot/static/: script.js  style.css
scratch/: test_20_tricky.py  test_tricky_results.json
scripts/: measure_tokens.py  smoke_llm_only.py
tests/: test_ava_hardening.py  test_harassment_rewrite_guard.py
tmp/: check_counts.py  check_qdrant.py
