[project]
name = "ai-lms-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "llama-index>=0.10.20",
    "llama-index-core>=0.10.20",
    "llama-index-embeddings-openai>=0.1.6",
    "llama-index-vector-stores-qdrant>=0.1.4",
    "langgraph>=1.0.10",
    "langsmith>=0.7.16",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0",
    "qdrant-client>=1.17.0",
    "rank-bm25>=0.2.2",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
    "langfuse>=4.0.0",
]
