[project]
name = "ai-lms-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "httpx>=0.28.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "llama-index-core>=0.10.20",
    "llama-index-vector-stores-qdrant>=0.1.4",
    "llama-index-embeddings-openai-like>=0.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.10.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.17.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
    "arq>=0.25.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.13.1",
    "pypdf>=4.3.1",
    "tenacity>=9.0.0",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "pytest-mock>=3.15.1",
]
