[project]
name = "ai-lms-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "httpx>=0.28.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "llama-index-core>=0.10.20",
    "llama-index-vector-stores-qdrant>=0.1.4",
    "llama-index-embeddings-openai-like>=0.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.10.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.17.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0",
    "tzdata>=2024.2",
    "uvicorn[standard]>=0.41.0",
    "streaq>=7.0.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.13.1",
    "pypdf>=4.3.1",
    "cachetools>=7.0.0",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "pytest-mock>=3.15.1",
    "types-pyyaml>=6.0.12.20260518",
    "types-cachetools>=7.0.0.20260518",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
# Gate fix: previously mypy aborted with "Source file found twice under
# different module names: agents.x vs app.agents.x". Cause: `app/` had no
# __init__.py while its subpackages did, so mypy rooted packages at `app/`
# (module `agents.x`) even though the codebase imports `app.agents.x`.
# explicit_package_bases + mypy_path="." pin the base to the repo root, so
# every file resolves to its `app.*` name unambiguously. namespace_packages
# supports the PEP 420 `app` namespace (no __init__.py at runtime).
python_version = "3.12"
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
files = ["app"]
# pydantic.mypy teaches mypy that BaseSettings fields are populated from the
# environment, so `Settings()` with no kwargs is valid (was 4 false-positive
# "Missing named argument" errors at settings.py call sites).
plugins = ["pydantic.mypy"]
# Third-party surfaces without complete stubs (streaq, qdrant_client,
# langchain_openai, llama_index) would otherwise drown the gate in stub-gap
# noise unrelated to our code. Keep the signal on our own type errors.
ignore_missing_imports = true
follow_imports = "silent"
# check_untyped_defs: type-check the body of functions even when they have no
# annotated signature. WITHOUT this, mypy silently skips unannotated function
# bodies entirely (emitting only [annotation-unchecked] notes) — so "0 errors"
# was lenient, not strict. Turning it on surfaced 3 real errors (now fixed) and
# stops new untyped-def bugs from hiding behind the gate.
check_untyped_defs = true
